syntax = "proto3";

package token;

import "google/protobuf/timestamp.proto";

option go_package = "/protogen/token";

message Payment {
    string token_data  = 1 [json_name = "token_data"];
    string card_type   = 2 [json_name = "card_type"];
    string card_model  = 3 [json_name = "card_model"];
    uint32 card_atc    = 4 [json_name = "card_atc"];       
    string currency    = 5 [json_name = "currency"];
    double amount      = 6 [json_name = "amount"];
    string terminal    = 7 [json_name = "terminal"];
    string status      = 8 [json_name = "status"];
    string mcc         = 9 [json_name = "mcc"];
    google.protobuf.Timestamp payment_at = 10 [json_name = "payment_at"];
    string transaction_id = 11 [json_name = "transaction_id"];
}

message Step{
  string step_process = 1 [json_name = "step_process"];
  google.protobuf.Timestamp processed_at = 2 [json_name = "processed_at"];
} 

message PaymentTokenRequest {
    Payment payment = 1;
}

message PaymentTokenResponse {
  Payment payment = 1;
  repeated Step steps = 2;
}